# surgiform-backend

./: .dockerignore  .env.test  .gitignore  DNS_SETUP_GUIDE.md  Dockerfile  Makefile  README.md  README_DEPLOYMENT.md  app.yaml  benchmark_openai.py  benchmark_report.md  benchmark_results.json  cloudbuild.yaml  comprehensive_benchmark_report.md  demo.py  deploy.sh  elasticsearch-setup.sh  final_benchmark_report.md  pyproject.toml  requirements.txt  set-env-vars.sh  setup-domain.sh  setup-elasticsearch.sh  sync-env.sh
.github/workflows/: deploy-gcp.yml
surgiform/: main.py
surgiform/api/: dependency.py  router.py
surgiform/api/endpoint/: chat.py  consent.py  health.py  surgical_image.py  transform.py
surgiform/api/models/: __init__.py  base.py  chat.py  consent.py  surgical_image.py  transform.py
surgiform/core/consent/: pipeline.py
surgiform/core/ingest/uptodate/: crawler.py  fast_medical_rag.py  medical_graph_rag.py  medical_parser.py  medical_rag_engine.py  run_es.py
surgiform/core/transform/: pipeline.py  prompts.py
surgiform/deploy/: server.py  settings.py
surgiform/deploy/service/: chat.py  consent.py  surgical_image.py  transform.py
tests/: test_external.py
