[tool.poetry]
name = "surgiform"
version = "0.1.0"
description = "수술동의서 생성·변환 API"
authors = [
    "Hyun Park <nemod.leo@snu.ac.kr>",
    "Shin Seowon <sswilove1@kaist.ac.kr>",
    "Kim Minjun <kimminjun67@snu.ac.kr>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.14"
openai = ">=1.33.0"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
langchain-core = "^0.3.66"
langchain-community = "^0.3.26"
langchain-openai  = "^0.3.26"
elasticsearch = "^8.13.0"
python-dotenv = "^1.1"
requests = "^2.32"
pydantic = "^2.11"
pydantic-settings = "^2.1"
beautifulsoup4 = "^4.13.4"
neo4j = "^5.28.1"
langchain = "^0.3.26"
playwright = "^1.53.0"
tenacity = "^9.1.2"
tqdm = "^4.66.0"
gradio = "^5.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
flake8 = "^7.0"
mypy = "^1.10"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
